Fix code highlighting in dark mode

--- a/src/css/custom.css
+++ b/src/css/custom.css
@@ -35,6 +35,7 @@
   --ifm-color-primary-light: #ef4444;
   --ifm-color-primary-lighter: #f87171;
   --ifm-color-primary-lightest: #fca5a5;
+  --docusaurus-highlighted-code-line-bg: rgb(68, 71, 90);
 }
 
 .header--github-link {
